--- a/buoi_16_context_Api/context-api-buoi16/package.json
+++ b/buoi_16_context_Api/context-api-buoi16/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1",
-    "lodash": "^4.17.15"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
